--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "babel server.js --out-dir build",
-    "dev-start": "babel-watch server.js",
+    "start": "cross-env NODE_ENV=production node ./server/dist/src/app.js",
     "lint": "eslint **/*.js --fix",
     "test": "cross-env NODE_ENV=test nyc mocha ./server/test --require babel-register --recursive --timeout 50000 --exit",
     "coverage": "cross-env NODE_ENV=test npm run nyc -- --report lcovonly && cat ./coverage/lcov.info | coveralls"
