--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ node_js:
 # after_script:
 #   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
-# after_success:
-#   - npm run coverage
+after_success:
+   - npm run coverage
